[#620] Reviewing the IPv6 multicast code