@@ -1142,9 +1142,9 @@
     </profile>
 
     <profile>
-      <id>jdk11-20</id>
+      <id>jdk11-16</id>
       <activation>
-        <jdk>[11,21)</jdk>
+        <jdk>[11,17)</jdk>
       </activation>
       <build>
         <pluginManagement>
@@ -1156,6 +1156,29 @@
               <configuration>
                 <argLine>
                   --illegal-access=deny
+                  --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>jdk17-23</id>
+      <activation>
+        <jdk>[17,24)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${plugin.maven-surefire-plugin}</version>
+              <configuration>
+                <argLine>
                   --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
                 </argLine>
               </configuration>
